--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,40 @@
 <!-- Bio of Me -->
 
-<div class="container">
-    <h1>About Me</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada.</p>
-    <p>Connect with me on <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="header"></div>
+    <main class="container">
+        <h1>Allie Roth</h1>
+        <h2>Founder & Principal Analyst at Aline Analytics</h2>
+        <p>
+            I'm the founder and principal analyst at Aline
+            Analytics, turning complex data into clear,
+            actionable insights. With experience in compensation
+            analysis, advanced proficiency in Excel, SQL, and Python,
+            I help organizations make informed, strategic decisions.
+            My work is grounded in both precision and practicality,
+            ensuring every analysis drives meaningful impact.
+            <br>
+            <br>
+            I believe the best results come from collaboration - working
+            closely with teams and clients to understand their goals
+            and deliver insights that create real value. Whether it's
+            designing reports, modeling data, or tackling analytical
+            challenges, I bring curiosity, rigor, and a modern approach
+            to every project.
+        </p>
+        <p>
+            Connect with me on 
+            <a href="https://www.linkedin.com/in/allison-roth-ms-4b0728104" target="_blank">LinkedIn</a>
+            to learn more about my professional experience and projects.</p>
+    </main>
+    <div id="footer"></div>
+    <script src="includes.js"></script>
+</body>
